Revision history for {{$dist->name}}

{{$NEXT}}

0.020     2012-04-28 11:21:55 America/New_York

        dist.ini tweaking:
	    * Exclude archived releases and dist.ini from dist
            * Don't ship README; only README.mkdn
            * Set homepage and bugtracker URLs in META.yml

0.019     2012-04-25 08:14:54 America/New_York

        Skip 'git log --oneline' test on older gits without support for that option

0.018     2012-04-22 15:30:43 America/New_York

        Misc doc clean ups and tweaks (John SJ Anderson)
        Add ERR and OUT methods to provide direct access to STDERR and STDOUT, respectively
          (attempt to address RT#71632, John SJ Anderson)
        Generate proper calls for single letter options that take values (RT#75955, Fitz Elliott)
        Update documentation to demonstrate how to pass '0' to an option (RT#58787, John SJ Anderson)
        Make git-wrapper a bit friendlier on old gits (Ricardo Signes)

0.017     2011-09-27 14:35:19 America/New_York

        Remove usage of '//' operator (again) (John SJ Anderson)

0.016     2011-09-05 20:24:49 America/New_York

        Lots of tweaks to tests that will (hopefully) reduce some testing noise (John SJ Anderson)
        Fix for multi-line commit messages on Win32 (Christian Walde)

0.015     2011-07-16 10:15:15 America/New_York

        Added a fix that allows the 'clone' command to work (John SJ Anderson)
        Change 'log' indentation stripping behavior (RT#56427, Mark Grimes)

0.014   2010-11-12

        Added empty commit message handling (Robert Bohne)
        Fixed failed tests on slow smokers. (Robert Bohne)
        Convert to Dist::Zilla (John SJ Anderson)
        Add 'is_dirty' helper to Statuses (John SJ Anderson)

0.013   2010-09-06

        Added missing dependency for Test::Deep

0.012   2010-09-05

        Rewrote // operator into pre-5.10 perl
        Debugging mode (Alexandr Ciornii)

0.011   2010-07-14

        Doc Patch (Gabrielle Roth)