@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        Splitted up classes inside Git::Wrapper to individual package files (Torsten Raudssus)
 
 0.020     2012-04-28 11:21:55 America/New_York
 
